--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,49 @@
-/* 
+body {
+    background-color: #f4f1e1; 
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+input[type="text"], 
+.create-task-btn {
+    margin-top: 3rem;
+}
 
-*/
+h1 {
+    margin-top: 1rem;
+}
+
+.delete-task-btn {
+    margin-top: 1rem;
+    margin-left: 10px;
+    border-radius: 4px;
+}
+
+ul {
+    padding-left: 0;
+    margin-top: 2rem;
+}
+
+li {
+    list-style: none;
+}
+
+.task-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.5rem 1rem;
+    position: relative;
+    padding-left: 2rem; /* espacio para el punto manual */
+}
+
+.task-item::before {
+    content: "•";
+    position: absolute;
+    left: 0;
+    font-size: 1.2rem;
+    color: black;
+}
+
+.task-label {
+    flex-grow: 1;
+    padding-right: 1rem;
+}
